# recipepe

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  nginx.conf  pyproject.toml  test_api.py
.github/workflows/: deploy.yml
