[project]
name = "recipepe"
version = "0.1.0"
description = "FastAPI endpoint to extract structured recipe data from URLs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "instructor>=1.3.5",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "openai>=1.12.0",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.1.14"
]